objects/SubCategory__c.object
<CustomObject>
    <description>Sub Category</description>
    <fields>
        <fullName>Actual_Spent__c</fullName>
        <description>Actual Spent</description>
        <inlineHelpText>Actual Spent</inlineHelpText>
        <label>Actual Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>SubCategories</relationshipLabel>
        <relationshipName>SubCategories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Forecast_Savings__c</fullName>
        <description>Forecast Savings</description>
        <inlineHelpText>Forecast Savings</inlineHelpText>
        <label>Forecast Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Spent__c</fullName>
        <description>Forecast Spent</description>
        <label>Forecast Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Realized_Savings__c</fullName>
        <description>Realized Savings</description>
        <label>Realized Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Realized_Spent__c</fullName>
        <description>Realized Spent</description>
        <inlineHelpText>Realized Spent</inlineHelpText>
        <label>Realized Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubCategoryNo__c</fullName>
        <description>Sub Category Number</description>
        <displayFormat>SCAT-{000000}</displayFormat>
        <inlineHelpText>Sub Category Number</inlineHelpText>
        <label>SubCategoryNo</label>
        <type>AutoNumber</type>
    </fields>
    <label>SubCategory</label>
    <nameField>
        <label>SubCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubCategories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>